# SNN-transformer

./: .gitignore  Adaptive_Timestep_SNN_Transformer_Presentation.pptx  LICENSE  README.md  academic_report.docx  architecture_diagram.md  compile_paper.sh  create_ppt.py  environment.yml  main.py  pyproject.toml  requirements.txt  research_paper.aux  research_paper.out  research_paper.tex  research_paper.toc  research_presentation.pptx  research_presentation_v2.pptx
Result/: history.json  snn-transformer-optimised-ipynb.ipynb
src/: adaptive_snn_training.ipynb  agent.py  dataset.py  inference.py  metrics.py  snn_model.py  train.py  utils.py
src/notebooks/: 01_visualize_brats.ipynb  02_dataloader_augmentation.ipynb  03_spiking_transformer_training.ipynb  04_llm_agentic_triage.ipynb  05_llm_agentic_triage_error (3).ipynb
