[project]
name = "spiking-transformer"
version = "0.1.0"
description = "Spiking Transformer with agentic orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "jupyter",
    "langgraph",
    "matplotlib",
    "nibabel",
    "numpy",
    "pandas",
    "snntorch",
    "torch",
]
